--- a/GANs_mnist.ipynb
+++ b/GANs_mnist.ipynb
@@ -6,7 +6,7 @@
       "name": "GANs_Face_Data_New.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBDJ4lqEkxkMsRH75+fG74",
+      "authorship_tag": "ABX9TyOy5Q9Umqf2blr8nh3NKdOa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +35,11 @@
         "import tensorflow as tf\n",
         "import tensorflow.keras as tk\n",
         "from tensorflow.keras.datasets import mnist \n",
-        "import imageio"
+        "import imageio\n",
+        "import numpy as np\n",
+        "from sklearn.utils import shuffle"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -46,9 +48,14 @@
         "id": "w82vs-ntOVET"
       },
       "source": [
-        "#preprocessing of dataset(normalization and shuffling of images)\n"
+        "#preprocessing of dataset(normalization and shuffling of images)\n",
+        "dataset = mnist.load_data(path=\"mnist.npz\")\n",
+        "x_train,y_train,x_test,y_test = dataset[0][0],dataset[0][1],dataset[1][0],dataset[1][1]\n",
+        "x_train = x_train/255.0;x_test = x_test/255.0\n",
+        "x_train,y_train = shuffle(x_train,y_train)\n",
+        "x_test,y_test = shuffle(x_test,y_test)"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -57,7 +64,8 @@
         "id": "aztTGiy9OvDp"
       },
       "source": [
-        "#generator model\n"
+        "#generator model\n",
+        "def generator()"
       ],
       "execution_count": null,
       "outputs": []
