--- a/GANs_mnist.ipynb
+++ b/GANs_mnist.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "GANs_Face_Data_New.ipynb",
+      "name": "GANs_mnist.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOy5Q9Umqf2blr8nh3NKdOa",
+      "authorship_tag": "ABX9TyMSl6/510OKQAFZtidLAWSL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,9 +37,12 @@
         "from tensorflow.keras.datasets import mnist \n",
         "import imageio\n",
         "import numpy as np\n",
-        "from sklearn.utils import shuffle"
+        "from sklearn.utils import shuffle\n",
+        "from tensorflow.keras.layers import Dense,Conv2DTranspose,Conv2D,Dropout,Flatten,MaxPool2D\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras import activations"
       ],
-      "execution_count": 38,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -65,9 +68,19 @@
       },
       "source": [
         "#generator model\n",
-        "def generator()"
+        "def generator(noise):\n",
+        "  model = Sequential()\n",
+        "  model.add(Dense(noise))\n",
+        "  model.add(tf.keras.layers.Reshape(None,28,28,1))\n",
+        "  model.add(Conv2DTranspose(256,activations = 'relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(Conv2DTranspose(128,activations = 'relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(Conv2DTranspose(64,activations = 'relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  return model"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -76,9 +89,28 @@
         "id": "zPw9BiyjO4RW"
       },
       "source": [
-        "#discriminator model\n"
+        "#discriminator model\n",
+        "def discriminator(image):\n",
+        "  model = Sequential()  \n",
+        "  model.add(Conv2D(64,kernel = (3,3),activation='relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "  model.add(Conv2D(128,kernel = (3,3),activation='relu'))\n",
+        "  model.add(Dropout(0.3))\n",
+        "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "  model.add(Conv2D(256,kernel = (3,3),activation='relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(MaxPooling2D(pool_size=(2,2)))\n",
+        "  model.add(Flatten())\n",
+        "  model.add(Dense(200,activation='relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(Dense(100,activation='relu'))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(Dense(50,activation='relu'))\n",
+        "  model.add(Dense(1,activation='relu'))\n",
+        "  return model"
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
