--- a/GANs_mnist.ipynb
+++ b/GANs_mnist.ipynb
@@ -6,7 +6,7 @@
       "name": "GANs_mnist.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMSl6/510OKQAFZtidLAWSL",
+      "authorship_tag": "ABX9TyO7NPSx7TBUBB+KlvjZw+Ah",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,9 +119,10 @@
         "id": "D7HRC0IyO794"
       },
       "source": [
-        "#loss\n"
+        "#loss\n",
+        "#loss = tk.losses.binary_crossentropy(from_logits = True)\n"
       ],
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -130,9 +131,11 @@
         "id": "tJWI2sE1O9nw"
       },
       "source": [
-        "#optimizers\n"
+        "#optimizers\n",
+        "gen_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
+        "dis_optimizer = tf.keras.optimizers.Adam(1e-4)"
       ],
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -141,9 +144,11 @@
         "id": "GPSlOhiLO-zB"
       },
       "source": [
-        "#generative_loss\n"
+        "#generative_loss\n",
+        "def gen_loss(fake):\n",
+        "  return tk.losses.binary_crossentropy(tf.zeros_like(fake),fake,from_logits = True)"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -152,9 +157,14 @@
         "id": "uqPfKuQiPCbC"
       },
       "source": [
-        "#discriminator_loss\n"
+        "#discriminator_loss\n",
+        "def dis_loss(fake,original):\n",
+        "  real_loss = tk.losses.binary_crossentropy(tf.zeros_like(original),original,from_logits = True)\n",
+        "  fake_loss = tk.losses.binary_crossentropy(tf.zeros_like(fake),fake,from_logits = True)  \n",
+        "  total_loss= real_loss + fake_loss\n",
+        "  return total_loss  "
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -204,10 +214,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VszWgn0lSXUS"
+        "id": "VszWgn0lSXUS",
+        "outputId": "51e166df-1c01-4ec9-c6d8-62dce56b0a37",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
-        "#training occurs\n"
+        "#training occurs\n",
+        "def add(x,y):\n",
+        "  print(x+y)\n",
+        "x = [1,2,3,4,4]\n",
+        "y = [4,1,1,1,1]\n",
+        "add(x,y)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 4, 4, 1, 1, 1, 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sz2adoCejtku"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
