--- a/GANs_mnist.ipynb
+++ b/GANs_mnist.ipynb
@@ -6,7 +6,7 @@
       "name": "GANs_mnist.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO7NPSx7TBUBB+KlvjZw+Ah",
+      "authorship_tag": "ABX9TyPKD6wTKQnpByQbJHGIKIXn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras import activations"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "x_train,y_train = shuffle(x_train,y_train)\n",
         "x_test,y_test = shuffle(x_test,y_test)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
         "  model.add(Dropout(0.2))\n",
         "  return model"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
         "  model.add(Dense(1,activation='relu'))\n",
         "  return model"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
         "#loss\n",
         "#loss = tk.losses.binary_crossentropy(from_logits = True)\n"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "gen_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
         "dis_optimizer = tf.keras.optimizers.Adam(1e-4)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
         "def gen_loss(fake):\n",
         "  return tk.losses.binary_crossentropy(tf.zeros_like(fake),fake,from_logits = True)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,21 +159,10 @@
       "source": [
         "#discriminator_loss\n",
         "def dis_loss(fake,original):\n",
-        "  real_loss = tk.losses.binary_crossentropy(tf.zeros_like(original),original,from_logits = True)\n",
+        "  real_loss = tk.losses.binary_crossentropy(tf.ones_like(original),original,from_logits = True)\n",
         "  fake_loss = tk.losses.binary_crossentropy(tf.zeros_like(fake),fake,from_logits = True)  \n",
         "  total_loss= real_loss + fake_loss\n",
         "  return total_loss  "
-      ],
-      "execution_count": 61,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KaqhE16aPF2E"
-      },
-      "source": [
-        "#optimizer\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -184,7 +173,24 @@
         "id": "kpVvDkxKPH5N"
       },
       "source": [
-        "#training_Step\n"
+        "#training_Step\n",
+        "no_of_examples = 16\n",
+        "noise_dim = 100\n",
+        "noise = tf.random.normal(no_of_examples,noise_dim)\n",
+        "\n",
+        "def train_step(images,batch_size):\n",
+        "  t = batch_size\n",
+        "  noise = tf.random.normal(batch_size,noise_dim)\n",
+        "  \n",
+        "  with tf.GradientTape as gen_tape, tf.GradientTape as dis_tape:\n",
+        "    gen_images = generator(noise,trainable = True)\n",
+        "    original = discriminator(images,trainable = True) \n",
+        "    fake = discriminator(gen_images,trainable = True)\n",
+        "    generator_loss,discriminator_loss = gen_loss(fake),dis_loss(fake,original)\n",
+        "    gen_gradient,dis_gradient = gen_tape.gradient(generator_loss,generator.trainable_variables),gen_tape.gradient(discriminator_loss,discriminator.trainable_variables)\n",
+        "\n",
+        "  gen_optimizer(gen_gradient,generator.trainable_variables)\n",
+        "  dis_optimizer(dis_gradient,discriminator.trainable_variables)  "
       ],
       "execution_count": null,
       "outputs": []
@@ -195,7 +201,11 @@
         "id": "65qlLj_JPNf4"
       },
       "source": [
-        "#training_function\n"
+        "#training_function\n",
+        "epochs = 50\n",
+        "batch_size = 256\n",
+        "def train(dataset):\n",
+        "  \n"
       ],
       "execution_count": null,
       "outputs": []
@@ -208,7 +218,7 @@
       "source": [
         "#plotting and saving image function\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +239,7 @@
         "y = [4,1,1,1,1]\n",
         "add(x,y)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
