--- a/GANs_mnist.ipynb
+++ b/GANs_mnist.ipynb
@@ -6,7 +6,7 @@
       "name": "GANs_mnist.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPKD6wTKQnpByQbJHGIKIXn",
+      "authorship_tag": "ABX9TyOWfDeAZzkBVNsPrBlSLnou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,9 +40,10 @@
         "from sklearn.utils import shuffle\n",
         "from tensorflow.keras.layers import Dense,Conv2DTranspose,Conv2D,Dropout,Flatten,MaxPool2D\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras import activations"
+        "from tensorflow.keras import activations\n",
+        "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -52,23 +53,30 @@
       },
       "source": [
         "#preprocessing of dataset(normalization and shuffling of images)\n",
+        "batch_size = 256\n",
+        "\n",
         "dataset = mnist.load_data(path=\"mnist.npz\")\n",
         "x_train,y_train,x_test,y_test = dataset[0][0],dataset[0][1],dataset[1][0],dataset[1][1]\n",
-        "x_train = x_train/255.0;x_test = x_test/255.0\n",
-        "x_train,y_train = shuffle(x_train,y_train)\n",
-        "x_test,y_test = shuffle(x_test,y_test)"
+        "x_train = x_train/255.0\n",
+        "x_train = shuffle(x_train)\n",
+        "x_train = tf.data.Dataset.from_tensor_slices(x_train).batch(batch_size)"
       ],
-      "execution_count": null,
+      "execution_count": 74,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aztTGiy9OvDp"
+        "id": "aztTGiy9OvDp",
+        "outputId": "5d52a41a-24d6-4b53-f989-09e1fa71d36e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 312
+        }
       },
       "source": [
         "#generator model\n",
-        "def generator(noise):\n",
+        "def generator_model():\n",
         "  model = Sequential()\n",
         "  model.add(Dense(noise))\n",
         "  model.add(tf.keras.layers.Reshape(None,28,28,1))\n",
@@ -78,10 +86,25 @@
         "  model.add(Dropout(0.2))\n",
         "  model.add(Conv2DTranspose(64,activations = 'relu'))\n",
         "  model.add(Dropout(0.2))\n",
-        "  return model"
+        "  return model\n",
+        "\n",
+        "generator = generator_model()  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-96-b17ee74d0b7a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mgenerator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-96-b17ee74d0b7a>\u001b[0m in \u001b[0;36mgenerator_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgenerator_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m   \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDense\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnoise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mReshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m28\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mConv2DTranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mactivations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'relu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'noise' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -90,7 +113,7 @@
       },
       "source": [
         "#discriminator model\n",
-        "def discriminator(image):\n",
+        "def discriminator_model():\n",
         "  model = Sequential()  \n",
         "  model.add(Conv2D(64,kernel = (3,3),activation='relu'))\n",
         "  model.add(Dropout(0.2))\n",
@@ -110,19 +133,7 @@
         "  model.add(Dense(1,activation='relu'))\n",
         "  return model"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "D7HRC0IyO794"
-      },
-      "source": [
-        "#loss\n",
-        "#loss = tk.losses.binary_crossentropy(from_logits = True)\n"
-      ],
-      "execution_count": null,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -135,7 +146,7 @@
         "gen_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
         "dis_optimizer = tf.keras.optimizers.Adam(1e-4)"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -148,7 +159,7 @@
         "def gen_loss(fake):\n",
         "  return tk.losses.binary_crossentropy(tf.zeros_like(fake),fake,from_logits = True)"
       ],
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -164,7 +175,7 @@
         "  total_loss= real_loss + fake_loss\n",
         "  return total_loss  "
       ],
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -176,23 +187,22 @@
         "#training_Step\n",
         "no_of_examples = 16\n",
         "noise_dim = 100\n",
-        "noise = tf.random.normal(no_of_examples,noise_dim)\n",
         "\n",
         "def train_step(images,batch_size):\n",
         "  t = batch_size\n",
-        "  noise = tf.random.normal(batch_size,noise_dim)\n",
+        "  noise = tf.random.normal([batch_size,noise_dim])\n",
         "  \n",
-        "  with tf.GradientTape as gen_tape, tf.GradientTape as dis_tape:\n",
-        "    gen_images = generator(noise,trainable = True)\n",
-        "    original = discriminator(images,trainable = True) \n",
-        "    fake = discriminator(gen_images,trainable = True)\n",
+        "  with tf.GradientTape() as gen_tape, tf.GradientTape() as dis_tape:\n",
+        "    gen_images = generator(noise,training = True)\n",
+        "    original = discriminator(images,training = True) \n",
+        "    fake = discriminator(gen_images,training = True)\n",
         "    generator_loss,discriminator_loss = gen_loss(fake),dis_loss(fake,original)\n",
         "    gen_gradient,dis_gradient = gen_tape.gradient(generator_loss,generator.trainable_variables),gen_tape.gradient(discriminator_loss,discriminator.trainable_variables)\n",
         "\n",
         "  gen_optimizer(gen_gradient,generator.trainable_variables)\n",
         "  dis_optimizer(dis_gradient,discriminator.trainable_variables)  "
       ],
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -204,10 +214,21 @@
         "#training_function\n",
         "epochs = 50\n",
         "batch_size = 256\n",
-        "def train(dataset):\n",
-        "  \n"
+        "\n",
+        "def train(dataset,epochs,batch_size):\n",
+        "  for i in range(epochs):\n",
+        "    for batch in dataset:\n",
+        "      train_step(batch,batch_size)  \n",
+        "\n",
+        "    display.clear_output(wait = True)\n",
+        "    noise = tf.random.normal([no_of_examples,noise_dim])\n",
+        "    generate_and_save_image(generator,epoch+1,noise)\n",
+        "\n",
+        "  display.clear_output(wait = True)\n",
+        "  generate_and_save_image(generator,epochs,noise)\n",
+        "  print(\"The number of epoch is \",epoch)\n"
       ],
-      "execution_count": null,
+      "execution_count": 93,
       "outputs": []
     },
     {
@@ -216,44 +237,55 @@
         "id": "NKWoR_LTPQ2a"
       },
       "source": [
-        "#plotting and saving image function\n"
+        "#plotting and saving image function\n",
+        "def generate_and_save_image(model,epoch,noise):\n",
+        "  images = generator(noise,trainable = False)\n",
+        "  fig = plt.figure(figsize = (4,4))\n",
+        "  for i in range(len(images)):\n",
+        "    plt.subplot(4,4,i+1)\n",
+        "    plt.imshow(images[i])\n",
+        "  plt.show()\n",
+        "  plt.savefig('/content/images/epoch'+str(epoch)+'.png') \n",
+        "   "
       ],
-      "execution_count": null,
+      "execution_count": 94,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "VszWgn0lSXUS",
-        "outputId": "51e166df-1c01-4ec9-c6d8-62dce56b0a37",
+        "outputId": "3752f333-e33a-4197-8809-beb6b83b889f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 33
+          "height": 436
         }
       },
       "source": [
         "#training occurs\n",
-        "def add(x,y):\n",
-        "  print(x+y)\n",
-        "x = [1,2,3,4,4]\n",
-        "y = [4,1,1,1,1]\n",
-        "add(x,y)"
+        "train(dataset,epochs,batch_size)"
       ],
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "[1, 2, 3, 4, 4, 4, 1, 1, 1, 1]\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-95-314105242b1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#training occurs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-93-6f814e913a66>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(dataset, epochs, batch_size)\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m       \u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-92-31f11713413a>\u001b[0m in \u001b[0;36mtrain_step\u001b[0;34m(images, batch_size)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0;32mwith\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGradientTape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgen_tape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGradientTape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdis_tape\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mgen_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnoise\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtraining\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0moriginal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiscriminator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtraining\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mfake\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiscriminator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgen_images\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtraining\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: generator() got an unexpected keyword argument 'training'"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sz2adoCejtku"
+        "id": "2Ww8rlKUG0o6"
       },
       "source": [
         ""
